U24 browse gardens by tag
- finished cucumbers for AC5
- finished additional scenario for removing a tag